@@ -5,10 +5,7 @@ import com.example.be_java_hisp_w23_g3.entity.User;
 import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 
 @Repository
 public class UserRepositoryImpl implements UserRepository {
@@ -39,11 +36,11 @@ public class UserRepositoryImpl implements UserRepository {
     @PostConstruct
     private void load() {
         users.addAll(List.of(
-                User.build(1L, "user1", Set.of(
+                User.build(1L, "user1", new HashSet<>(Arrays.asList(
                         Seller.build(User.build(8L,"abcdef")),
                         Seller.build(User.build(9L,"bcdefg")),
                         Seller.build(User.build(10L,"cdefgh"))
-                )),
+                ))),
                 User.build(2L, "user2"),
                 User.build(3L, "user3"),
                 User.build(4L, "user4"),
